@@ -13,7 +13,7 @@ fragment <<EOF
 
 /* ${ELFSIZE} bit ELF emulation code for ${EMULATION_NAME}
    Copyright 1991, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001,
-   2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013
+   2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012
    Free Software Foundation, Inc.
    Written by Steve Chamberlain <sac@cygnus.com>
    ELF support by Ian Lance Taylor <ian@cygnus.com>
@@ -105,16 +105,6 @@ gld${EMULATION_NAME}_before_parse (void)
   input_flags.dynamic = ${DYNAMIC_LINK-TRUE};
   config.has_shared = `if test -n "$GENERATE_SHLIB_SCRIPT" ; then echo TRUE ; else echo FALSE ; fi`;
   config.separate_code = `if test "x${SEPARATE_CODE}" = xyes ; then echo TRUE ; else echo FALSE ; fi`;
-EOF
-
-case ${target} in
-  *-*-linux-* | *-*-k*bsd*-* | *-*-gnu* | *-*-nacl*)
-    fragment <<EOF
-  link_info.new_dtags = TRUE;
-EOF
-    ;;
-esac
-fragment <<EOF
 }
 
 EOF
@@ -579,8 +569,7 @@ EOF
 #endif
 
 static bfd_boolean
-gld${EMULATION_NAME}_check_ld_elf_hints (const struct bfd_link_needed_list *l,
-					 int force)
+gld${EMULATION_NAME}_check_ld_elf_hints (const char *name, int force)
 {
   static bfd_boolean initialized;
   static char *ld_elf_hints;
@@ -623,9 +612,10 @@ gld${EMULATION_NAME}_check_ld_elf_hints (const struct bfd_link_needed_list *l,
   if (ld_elf_hints == NULL)
     return FALSE;
 
-  needed.by = l->by;
-  needed.name = l->name;
-  return gld${EMULATION_NAME}_search_needed (ld_elf_hints, &needed, force);
+  needed.by = NULL;
+  needed.name = name;
+  return gld${EMULATION_NAME}_search_needed (ld_elf_hints, & needed,
+					     force);
 }
 EOF
     # FreeBSD
@@ -797,8 +787,7 @@ gld${EMULATION_NAME}_parse_ld_so_conf
 }
 
 static bfd_boolean
-gld${EMULATION_NAME}_check_ld_so_conf (const struct bfd_link_needed_list *l,
-				       int force)
+gld${EMULATION_NAME}_check_ld_so_conf (const char *name, int force)
 {
   static bfd_boolean initialized;
   static char *ld_so_conf;
@@ -835,8 +824,8 @@ gld${EMULATION_NAME}_check_ld_so_conf (const struct bfd_link_needed_list *l,
     return FALSE;
 
 
-  needed.by = l->by;
-  needed.name = l->name;
+  needed.by = NULL;
+  needed.name = name;
   return gld${EMULATION_NAME}_search_needed (ld_so_conf, &needed, force);
 }
 
@@ -1192,6 +1181,8 @@ gld${EMULATION_NAME}_after_open (void)
      special action by the person doing the link.  Note that the
      needed list can actually grow while we are stepping through this
      loop.  */
+  if (!link_info.executable)
+    return;
   needed = bfd_elf_get_needed_list (link_info.output_bfd, &link_info);
   for (l = needed; l != NULL; l = l->next)
     {
@@ -1200,13 +1191,9 @@ gld${EMULATION_NAME}_after_open (void)
       int force;
 
       /* If the lib that needs this one was --as-needed and wasn't
-	 found to be needed, then this lib isn't needed either.  Skip
-	 the lib when creating a shared object unless we are copying
-	 DT_NEEDED entres.  */
+	 found to be needed, then this lib isn't needed either.  */
       if (l->by != NULL
-	  && ((bfd_elf_get_dyn_lib_class (l->by) & DYN_AS_NEEDED) != 0
-	      || (!link_info.executable
-		  && bfd_elf_get_dyn_lib_class (l->by) & DYN_NO_ADD_NEEDED) != 0))
+	  && (bfd_elf_get_dyn_lib_class (l->by) & DYN_AS_NEEDED) != 0)
 	continue;
 
       /* If we've already seen this file, skip it.  */
@@ -1319,7 +1306,7 @@ if [ "x${USE_LIBPATH}" = xyes ] ; then
   case ${target} in
     *-*-freebsd* | *-*-dragonfly*)
       fragment <<EOF
-	  if (gld${EMULATION_NAME}_check_ld_elf_hints (l, force))
+	  if (gld${EMULATION_NAME}_check_ld_elf_hints (l->name, force))
 	    break;
 EOF
     # FreeBSD
@@ -1328,7 +1315,7 @@ EOF
     *-*-linux-* | *-*-k*bsd*-* | *-*-gnu*)
     # Linux
       fragment <<EOF
-	  if (gld${EMULATION_NAME}_check_ld_so_conf (l, force))
+	  if (gld${EMULATION_NAME}_check_ld_so_conf (l->name, force))
 	    break;
 
 EOF
@@ -2290,17 +2277,6 @@ fragment <<EOF
 	    einfo (_("%P%F: invalid common page size \`%s'\n"),
 		   optarg + 17);
 	}
-      else if (CONST_STRNEQ (optarg, "stack-size="))
-	{
-	  char *end;
-	  link_info.stacksize = strtoul (optarg + 11, &end, 0);
-	  if (*end || link_info.stacksize < 0)
-	    einfo (_("%P%F: invalid stack size \`%s'\n"), optarg + 11);
-	  if (!link_info.stacksize)
-	    /* Use -1 for explicit no-stack, because zero means
-	       'default'.   */
-	    link_info.stacksize = -1;
-	}
       else if (strcmp (optarg, "execstack") == 0)
 	{
 	  link_info.execstack = TRUE;
@@ -2314,8 +2290,6 @@ fragment <<EOF
 EOF
 if test x"$GENERATE_SHLIB_SCRIPT" = xyes; then
 fragment <<EOF
-      else if (strcmp (optarg, "global") == 0)
-	link_info.flags_1 |= (bfd_vma) DF_1_GLOBAL;
       else if (strcmp (optarg, "initfirst") == 0)
 	link_info.flags_1 |= (bfd_vma) DF_1_INITFIRST;
       else if (strcmp (optarg, "interpose") == 0)
@@ -2435,9 +2409,6 @@ EOF
 if test x"$GENERATE_SHLIB_SCRIPT" = xyes; then
 fragment <<EOF
   fprintf (file, _("\
-  -z global                   Make symbols in DSO available for subsequently\n\
-			       loaded objects\n"));
-  fprintf (file, _("\
   -z initfirst                Mark DSO to be initialized first at runtime\n"));
   fprintf (file, _("\
   -z interpose                Mark object to interpose all DSOs but executable\n"));
@@ -2486,8 +2457,6 @@ fragment <<EOF
 				processing at runtime\n"));
   fprintf (file, _("\
   -z relro                    Create RELRO program header\n"));
-  fprintf (file, _("\
-  -z stacksize=SIZE           Set size of stack segment\n"));
 EOF
 fi
 
